# demo_Deus_vision_YQS_stage2

./: README.md  README_YQS.md
detect/: .gitignore  CMakeLists.txt  README.md
detect/include/: detector.h  judge.h  target_selector.h  visualizer.h
detect/src/: detector.cpp  judge.cpp  main.cpp  target_selector.cpp  test.py  test_NMS_tannel.py  test_onnx.py  test_pt.py  visualizer.cpp
